--- a/_src/_includes/css/_config.scss
+++ b/_src/_includes/css/_config.scss
@@ -57,6 +57,7 @@ $mobile: 54em;
 
 html,
 body {
+  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
